Use remote image instead of building

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,6 @@
 version: '3'
 services:
   vulkan:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: ghcr.io/RafaelSolVargas/Vulkan:master 
     env_file:
       - .env
